# eb_nordpool

./: Cargo.toml  LICENSE-MIT  README.md  run.sh
src/: debug.rs  elspot.rs  error.rs  lib.rs  region_time.rs  units.rs
src/elspot/: dataportal_dayaheadprices.rs  hourly.rs  marketdata_page_10.rs
src/elspot/dataportal_dayaheadprices/: currencies.rs  query.rs  regions.rs  states.rs
src/elspot/marketdata_page_10/: hour_count.rs  unit_string.rs
tests/: dataportal_dayaheadprices.rs  download.rs  elspot.rs  marketdata_page_10.rs  units.rs
tests/common/: mod.rs
tests/data/: dataportal_dayaheadprices_NOK.json  marketdata_page_10_EUR_24H.json  marketdata_page_10_NOK_23H.json  marketdata_page_10_NOK_25H.json
