[package]
name = "eb_nordpool"
version = "0.2.5"
edition = "2021"

description = "Extract elspot prices from nordpool"
readme = "README.md"

authors = ["Emil Bratt <emilbratt@gmail.com>"]

repository = "https://github.com/emilbratt/eb_nordpool"

keywords = ["elspot", "nordpool", "power-market", "day-ahead", "Trade-power"]

license = "MIT/Apache-2.0"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.10" }
reqwest = { version = "0.12.15", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5.2"

[lib]
doctest = false
